--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,78 +2,75 @@ name: AvicaRDP
 on:
   workflow_dispatch:
   schedule:
-    - cron: '0 */6 * * *'  # Auto restart every 6 hours
+    - cron: '0 */6 * * *'  # Har 6 ghante baad auto restart
 
 jobs:
   build:
     name: Start Building...
     runs-on: windows-latest
-    timeout-minutes: 350  # Increased time limit
+    timeout-minutes: 350  # Zyada time limit
     
     steps:
       - name: Direct Avica Setup
         run: |
-          Write-Host "🚀 Starting Avica setup directly..." -ForegroundColor Green
+          Write-Host "🚀 Avica setup shuro ho raha hai..." -ForegroundColor Green
           
-          # Download files directly
+          # Files directly download karo
           Invoke-WebRequest -Uri "https://gitlab.com/userup908/my-rdp/-/raw/main/setup.py" -OutFile "setup.py"
           Invoke-WebRequest -Uri "https://download.avica.com/AvicaLite_v8.0.8.9.exe" -OutFile "Avica_setup.exe"
           Invoke-WebRequest -Uri "https://gitlab.com/userup908/my-rdp/-/raw/main/show.bat" -OutFile "show.bat"
           Invoke-WebRequest -Uri "https://gitlab.com/userup908/my-rdp/-/raw/main/loop.bat" -OutFile "loop.bat"
           
-          # Install Python packages
+          # Python packages install karo
           python.exe -m pip install requests pyautogui telegraph --quiet
           
-          # Enable RDP
+          # RDP ko enable karo
           Set-ItemProperty -Path 'HKLM:\System\CurrentControlSet\Control\Terminal Server' -name "fDenyTSConnections" -value 0
           Enable-NetFirewallRule -DisplayGroup "Remote Desktop"
           
-          # Set user password
+          # User password set karo
           net user runneradmin TheDisa1a
           
-          # Start Avica
-          Write-Host "⚡ Starting Avica..." -ForegroundColor Yellow
+          # Avica shuro karo
+          Write-Host "⚡ Avica shuro ho raha hai..." -ForegroundColor Yellow
           python -c "import pyautogui as pag; pag.click(897, 64, duration=2)" 2>$null
           Start-Process "Avica_setup.exe"
           
-          # Run setup script
+          # Setup script chalayo
           python setup.py
           
-          Write-Host "✅ Setup completed! Check for GoFile link!" -ForegroundColor Green
+          Write-Host "✅ Setup mukammal! GoFile link check karo!" -ForegroundColor Green
           
-      - name: Setup System User
+      - name: System User Setup Karo
         run: |
           net user runneradmin TheDisa1a
-          Write-Host "✅ System user configured" -ForegroundColor Green
+          Write-Host "✅ System user tayyar hai" -ForegroundColor Green
           
-      - name: Show Connection Info
+      - name: CMD Minimized Mein Kholo
         run: |
-          Write-Host "
-          ╔══════════════════════════════════════╗
-          ║        AVICA RDP CONNECTION          ║  
-          ╚══════════════════════════════════════╝
+          # CMD minimized mode mein kholo background mein
+          $scriptBlock = {
+            cmd.exe /c "echo ╔══════════════════════════════════════╗ && echo ║        AVICA RDP CONNECTION          ║ && echo ╚══════════════════════════════════════╝ && echo. && echo 📱 WhatsApp: +923091645255 && echo 👨‍💻 Created by HamzaEditz && echo Telegram: https://t.me/hamzaeditz2 && echo. && echo 📋 Instructions: && echo • GoFile link neeche ayega && echo • Wahan se Avica ID aur Password lo && echo • Avica app download karo aur connect karo && echo • GoFile link har bar badalta hai! && echo. && echo ⏳ GoFile link ka intezar... && timeout 86400"
+          }
           
-          📱 WhatsApp: +923091645255
-          👨‍💻 Created by HamzaEditz 
-          Telegram: https://t.me/hamzaeditz2
+          # Hidden window style ke sath CMD shuro karo
+          $processInfo = New-Object System.Diagnostics.ProcessStartInfo
+          $processInfo.FileName = "cmd.exe"
+          $processInfo.Arguments = "/c echo Connection Info Displayed && timeout 5"
+          $processInfo.WindowStyle = [System.Diagnostics.ProcessWindowStyle]::Minimized
+          $process = [System.Diagnostics.Process]::Start($processInfo)
           
-          📋 Instructions:
-          • Go to the GoFile link that will appear below
-          • Get Avica ID and Password from there
-          • Download Avica app and connect
-          • GoFile link changes every time!
+          Write-Host "✅ CMD minimized mode mein chalu ho gaya" -ForegroundColor Green
           
-          ⏳ Waiting for GoFile link...
-          " -ForegroundColor Cyan
-          
-      - name: Start Avica Service
+      - name: Avica Service Shuro Karo
         run: |
-          # Run show.bat minimized
+          # show.bat minimized chalayo
           $process = Start-Process -FilePath "cmd.exe" -ArgumentList "/c", "show.bat" -WindowStyle Minimized -PassThru
-          Write-Host "✅ Avica service started (minimized)" -ForegroundColor Green
+          Write-Host "✅ Avica service chalu ho gayi (minimized)" -ForegroundColor Green
           
-      - name: Keep Session Active
+      - name: Session Ko Active Rakho
         run: |
-          Write-Host "🚀 Avica is starting... Look for CONNECTION ID below!" -ForegroundColor Yellow
-          # Run loop.bat minimized
+          Write-Host "🚀 Avica shuro ho raha hai... CONNECTION ID talash karo!" -ForegroundColor Yellow
+          # loop.bat minimized chalayo
           $process = Start-Process -FilePath "cmd.exe" -ArgumentList "/c", "loop.bat" -WindowStyle Minimized -PassThru
+          Write-Host "✅ Session active rakhi ja rahi hai (background mein)" -ForegroundColor Green
